--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,12 +7,12 @@
         android:title="@string/action_settings"
         android:tint="@android:color/white"
         android:icon="@drawable/ic_settings_24dp"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_sort"
         android:title="@string/action_sort"
         android:icon="@drawable/ic_sort_24dp"
-        app:showAsAction="always">
+        app:showAsAction="ifRoom">
         <menu>
             <item
                 android:id="@+id/menuSortName"
