--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#3C3176</color>
     <color name="colorPrimaryDark">#221858</color>
     <color name="colorAccent">#AA9339</color>
+    <color name="transparent">#00000000</color>
 </resources>
