--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -2,9 +2,14 @@
 
     <SwitchPreference
         android:defaultValue="false"
-        android:key="dark_mode_on"
+        android:key="@string/preference_dark_mode_on_key"
         android:summary="@string/pref_description_theme"
         android:title="@string/pref_title_theme" />
 
+    <SwitchPreference
+        android:defaultValue="false"
+        android:key="@string/preference_instant_search_on_key"
+        android:summary="@string/pref_description_instant_search"
+        android:title="@string/pref_title_instant_search" />
 
 </PreferenceScreen>
