--- a/app/src/main/res/layout/activity_definition_lookup.xml
+++ b/app/src/main/res/layout/activity_definition_lookup.xml
@@ -36,7 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/editSearchWord"
-            android:imeOptions="actionSearch"
+            android:imeOptions="actionSearch|normal"
             android:inputType="text"
             android:drawableLeft="@android:drawable/ic_menu_search"
             android:layout_alignParentStart="true"/>
