Made the Fragment creational patterns a little more... sensible. They now follow the examples in the developer.android reference Fragment section.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#3C3176</color>
     <color name="colorPrimaryDark">#221858</color>
-    <color name="colorAccent">#AA9339</color>
+    <color name="colorAccent">#246C60</color>
     <color name="transparent">#00000000</color>
 </resources>
