--- a/app/src/main/res/layout/fragment_add_edit_vocab_word.xml
+++ b/app/src/main/res/layout/fragment_add_edit_vocab_word.xml
@@ -46,52 +46,39 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Name:"
-                android:id="@+id/lblName" />
 
-            <EditText
+            <android.support.design.widget.TextInputLayout
+                android:padding="8dp"
+                android:id="@+id/inputLayoutName"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/editName"
-                android:hint="Name" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Category:"
-                android:id="@+id/textView" />
-
-            <Spinner
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/spinnerCategory"
-                android:spinnerMode="dialog" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Definition:"
-                android:id="@+id/lblDefinition" />
+                android:layout_height="wrap_content">
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/editName"
+                    android:hint="Name" />
+            </android.support.design.widget.TextInputLayout>
 
             <RelativeLayout
+                android:padding="8dp"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
 
-                <EditText
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/inputLayoutDefinition"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:id="@+id/editDefinition"
-                    android:hint="Definition"
                     android:layout_alignParentStart="true"
-                    android:layout_toStartOf="@+id/btnDefinitionSearch" />
+                    android:layout_toStartOf="@+id/btnDefinitionSearch">
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/editDefinition"
+                        android:hint="Definition" />
+                </android.support.design.widget.TextInputLayout>
+
                 <ImageButton
                     android:src="@android:drawable/ic_menu_search"
                     android:layout_width="wrap_content"
@@ -104,21 +91,33 @@
                     android:layout_centerVertical="true"/>
             </RelativeLayout>
 
+            <android.support.design.widget.TextInputLayout
+                android:padding="8dp"
+                android:id="@+id/inputLayoutNotes"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/editNotes"
+                    android:hint="Notes" />
+
+            </android.support.design.widget.TextInputLayout>
+
             <TextView
+                android:padding="8dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Notes:"
-                android:id="@+id/lblNotes" />
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Category:"
+                android:id="@+id/lblCategory" />
 
-            <EditText
+            <Spinner
+                android:padding="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/editNotes"
-                android:hint="Notes" />
-
-
-
+                android:id="@+id/spinnerCategory"
+                android:spinnerMode="dialog" />
 
         </LinearLayout>
     </ScrollView>
