--- a/app/src/main/res/layout/fragment_vocab_word.xml
+++ b/app/src/main/res/layout/fragment_vocab_word.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:style="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,39 +16,39 @@
         android:layout_gravity="center_horizontal" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        style="@style/LabelStyle"
         android:text="Category:"
         android:id="@+id/lblCategory" />
 
     <TextView
+        android:paddingEnd="16dp"
+        android:paddingStart="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/tvCategory" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        style="@style/LabelStyle"
         android:text="Definition:"
         android:id="@+id/lblDefinition" />
 
     <TextView
+        android:paddingEnd="16dp"
+        android:paddingStart="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/tvDefinition" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        style="@style/LabelStyle"
         android:text="Notes:"
         android:id="@+id/lblNotes" />
 
     <TextView
+        android:paddingEnd="16dp"
+        android:paddingStart="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
